Added images folder, pulled articles from API along with stock charts and displayed them to HTML

--- a/index.html
+++ b/index.html
@@ -15,11 +15,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
 </head>
 <body>
-    
-<button>CLICK</button>
 
-<div class="container">
-    <canvas id="myChart"></canvas>
+    <header>
+        <h1>Placeholder Headline</h1>
+    </header>
+
+<input type="text" placeholder="Search">
+<button id="stockSearch">CLICK</button>
+
+<div>
+    <div class="container">
+        <img class="imgToggle" src="assets/images/stock-market.jpg" alt="pic">
+        <canvas id="myChart"></canvas>
+    </div>
+
+    <div class="container2">
+
+    </div>
 </div>
 
 
