Began organizing page layout, added second API to use

--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
 <input type="text" placeholder="Search">
 <button id="stockSearch">CLICK</button>
 
-<div>
+<div class="mainContent">
     <div class="container">
         <img class="imgToggle" src="assets/images/stock-market.jpg" alt="pic">
         <canvas id="myChart"></canvas>
     </div>
 
-    <div class="container2">
+    <div class="container2"></div>
 
-    </div>
 </div>
 
 
