--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
     <!-- JQuery -->
     <script
         src="https://code.jquery.com/jquery-3.3.1.js"
@@ -49,6 +51,7 @@
             <div class="search-nav">
                 <input id="companySearch" type="text" placeholder="Search by Company Name">
                 <button id="tradier" class="hvr-rectangle-in">Search</button>
+                <button id="logOut" onclick="mainApp.logOut()">Log Out</button>
             </div>
         </nav>
     </header>
@@ -73,7 +76,7 @@
 
 
 
-
+    <script type="text/javascript" src="firebase.js"></script>
     <script type="text/javascript" src="assets/app.js"></script>
 </body>
 </html>
