added user input validation and modal popup on error

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             
             <div class="search-nav">
                 <input id="companySearch" type="text" placeholder="Search by Company Name">
-                <button id="tradier" class="hvr-rectangle-in">Search</button>
+                <button id="tradier" class="searchBtn">Search</button>
                 <button id="logOut" onclick="mainApp.logOut()">Log Out</button>
             </div>
         </nav>
@@ -76,7 +76,7 @@
 
 
 
-    <script type="text/javascript" src="firebase.js"></script>
+    <!-- <script type="text/javascript" src="firebase.js"></script> -->
     <script type="text/javascript" src="assets/app.js"></script>
 </body>
 </html>
